--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets" : [
-      "react",
-      "es2015",
-      "stage-0",
-      "stage-1"
-    ],
-  "plugins": ["transform-decorators-legacy"]
+    "react",
+    "es2015",
+    "stage-0",
+    "stage-1"
+  ],
+  "plugins": ["react-hot-loader/babel"]
 }
