--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "parser": "babel-eslint"
   },
   "scripts": {
-    "production": "webpack -p",
-    "start": "webpack-dev-server --progress --inline --port 3000"
+    "start": "babel-node ./server.js",
+    "update-schema": "babel-node ./server/scripts/updateSchema"
   },
   "author": "",
   "license": "ISC",
@@ -23,19 +23,32 @@
     "url-loader": "^0.5.7"
   },
   "devDependencies": {
+    "babel-cli": "6.18.0",
     "babel-core": "^6.14.0",
     "babel-jest": "^17.0.2",
     "babel-loader": "^6.2.5",
+    "babel-plugin-react-transform": "2.0.2",
+    "babel-plugin-transform-runtime": "6.15.0",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "6.20.0",
     "enzyme": "^2.6.0",
+    "express": "4.14.0",
+    "express-graphql": "0.6.1",
+    "graphql": "0.8.2",
+    "graphql-relay": "0.4.4",
     "html-webpack-plugin": "^2.22.0",
     "image-webpack-loader": "^3.1.0",
     "radium": "^0.18.1",
     "react-addons-test-utils": "^15.4.1",
+    "react-hot-loader": "3.0.0-beta.6",
+    "react-transform-hmr": "1.0.4",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.0"
+    "webpack-dev-middleware": "1.9.0",
+    "webpack-dev-server": "^1.15.0",
+    "webpack-hot-middleware": "2.13.2"
   }
 }
