--- a/package.json
+++ b/package.json
@@ -34,18 +34,24 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-relay-plugin": "0.10.0",
+    "babel-relay-plugin-loader": "0.10.0",
     "babel-runtime": "6.20.0",
     "enzyme": "^2.6.0",
     "express": "4.14.0",
     "express-graphql": "0.6.1",
     "graphql": "0.8.2",
     "graphql-relay": "0.4.4",
+    "history": "4.5.0",
     "html-webpack-plugin": "^2.22.0",
     "image-webpack-loader": "^3.1.0",
     "radium": "^0.18.1",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "3.0.0-beta.6",
+    "react-relay": "0.10.0",
+    "react-router-relay": "0.13.5",
     "react-transform-hmr": "1.0.4",
+    "relay-local-schema": "0.5.5",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "1.9.0",
     "webpack-dev-server": "^1.15.0",
