Change serieslist layout

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "file-loader": "^0.9.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.1",
+    "react-fa": "4.1.2",
+    "react-fontawesome": "1.5.0",
     "react-hot-loader": "^3.0.0-beta.5",
     "react-router": "^2.8.1",
     "styled-components": "^1.2.0",
@@ -38,9 +40,11 @@
     "babel-relay-plugin": "0.10.0",
     "babel-relay-plugin-loader": "0.10.0",
     "babel-runtime": "6.20.0",
+    "css-loader": "0.26.1",
     "enzyme": "^2.6.0",
     "express": "4.14.0",
     "express-graphql": "0.6.1",
+    "extract-text-webpack-plugin": "1.0.1",
     "graphql": "0.8.2",
     "graphql-relay": "0.4.4",
     "history": "4.5.0",
@@ -55,6 +59,7 @@
     "react-transform-hmr": "1.0.4",
     "relay-local-schema": "0.5.5",
     "relay-mongodb-connection": "2.1.0",
+    "style-loader": "0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "1.9.0",
     "webpack-dev-server": "^1.15.0",
