--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hot-loader": "^3.0.0-beta.5",
     "react-router": "^2.8.1",
     "styled-components": "^1.2.0",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
